# HighFlowNext

./: Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
doc/: SPECIFICATION
examples/: hexdump.rs
src/: lib.rs
src/misc/: crc.rs  mod.rs  wrapped.rs
src/misc/io/: decode.rs  error.rs  mod.rs  reader.rs
src/protocol/: mod.rs
src/protocol/settings/: alarm.rs  display.rs  lighting.rs  mod.rs  sensor.rs  system.rs
tests/: settings_read.rs
tests/assets/: default.frame  effects_0.frame  effects_1.frame  effects_2.frame
